Add proper 1.8 BungeeCord, remove 2FA message and remove staffserver hardcoded whitelist

--- a/Plugins/Mineplex.Bungee.Mineplexer/pom.xml
+++ b/Plugins/Mineplex.Bungee.Mineplexer/pom.xml
@@ -14,16 +14,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-proxy</artifactId>
-            <version>1.4.7-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-api</artifactId>
-            <version>1.20-R0.3-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>mineplex-cache</artifactId>
             <version>${project.version}</version>
@@ -36,6 +26,10 @@
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-bootstrap</artifactId>
         </dependency>
     </dependencies>
 </project>
