--- a/Plugins/pom.xml
+++ b/Plugins/pom.xml
@@ -52,10 +52,6 @@
             <id>spigotmc-public</id>
             <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
         </repository>
-        <repository>
-            <id>bungeecord-repo</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </repository>
     </repositories>
 
     <dependencyManagement>
@@ -104,9 +100,10 @@
             </dependency>
             <dependency>
                 <groupId>net.md-5</groupId>
-                <artifactId>bungeecord-proxy</artifactId>
-                <version>1.20-R0.3-SNAPSHOT</version>
-                <scope>compile</scope>
+                <artifactId>bungeecord-bootstrap</artifactId>
+                <version>1.8-SNAPSHOT</version>
+                <scope>system</scope>
+                <systemPath>D:\mineplex-reborn\libs\bungeecord-bootstrap-1.8-SNAPSHOT.jar</systemPath>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -149,7 +146,7 @@
                 <artifactId>spigot</artifactId>
                 <version>1.8.8-1.9-SNAPSHOT</version>
                 <scope>system</scope>
-                <systemPath>D:/mineplex-reborn/spigot/spigot-1.8.8-1.9-SNAPSHOT.jar</systemPath>
+                <systemPath>D:\mineplex-reborn\libs\spigot-1.8.8-1.9-SNAPSHOT.jar</systemPath>
             </dependency>
             <dependency>
                 <groupId>redis.clients</groupId>
@@ -168,11 +165,6 @@
                 <artifactId>hamcrest-library</artifactId>
                 <version>1.3</version>
                 <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>io.netty</groupId>
-                <artifactId>netty-all</artifactId>
-                <version>4.1.107.Final</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
