--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
+servers/
 
 ##############################
 ## IntelliJ
