--- a/Plugins/pom.xml
+++ b/Plugins/pom.xml
@@ -52,6 +52,10 @@
             <id>spigotmc-public</id>
             <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>viaversion-repo</id>
+            <url>https://repo.viaversion.com</url>
+        </repository>
     </repositories>
 
     <dependencyManagement>
@@ -166,7 +170,14 @@
                 <version>1.3</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.viaversion</groupId>
+                <artifactId>viaversion-api</artifactId>
+                <version>4.9.3-SNAPSHOT</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
+
     </dependencyManagement>
 
     <build>
